changed biome classification