@@ -1,5 +1,9 @@
 package me.batata_1.fractal_terrain.world.biome;
 
+import me.batata_1.fractal_terrain.FractalTerrainConfig;
+import me.batata_1.fractal_terrain.debug.Debug;
+import me.batata_1.fractal_terrain.infinitetensor.FloatTensor;
+import me.batata_1.fractal_terrain.math.spline.Spline;
 import me.batata_1.fractal_terrain.noise.FastNoiseLite;
 
 public class ClimateVariableTransform {
@@ -16,7 +20,7 @@ public class ClimateVariableTransform {
         SNOW_NOISE = makeFnl(12345, 1f / 500f, 3, 2f, 0.5f);
         SNOW_NOISE_FINE = makeFnl(54321, 1f / 128f, 2, 2f, 0.5f);
         CONTINENTAL_NOISE = makeFnl(24567, 1f / 128f, 2, 2f, 0.5f);
-        WEIRDENSS_NOISE = makeFnl(5467, 1f / 32f, 5, 2f, 0.5f);
+        WEIRDENSS_NOISE = makeFnl(5467, 1f / 48f, 5, 2f, 0.5f);
     }
 
     public ClimateVariableTransform() {}
@@ -32,13 +36,10 @@ public class ClimateVariableTransform {
         return fnl;
     }
 
-    static final short PLAINS = 1, SNOWY_PLAINS = 3, DESERT = 5, SWAMP = 6;
-    static final short FOREST = 8, TAIGA = 15, SNOWY_TAIGA = 16, SAVANNA = 17;
-    static final short WINDSWEPT_HILLS = 19, JUNGLE = 23, BADLANDS = 26, MEADOW = 29;
-    static final short GROVE = 31, SNOWY_SLOPES = 32, FROZEN_PEAKS = 33, STONY_PEAKS = 35;
-    static final short WARM_OCEAN = 41, OCEAN = 44, COLD_OCEAN = 46, FROZEN_OCEAN = 48;
-    static final short FOREST_SPARSE = 108, TAIGA_SPARSE = 115, SNOWY_TAIGA_SPARSE = 116;
 
+    // 0->no erosion 1->high erosion
+    private static final Spline erosionSpline = new Spline(new float[]{0,1},new float[]{-0.9f,0.775f},new float[]{0,0});
+    private static final Spline temperatureSpline = new Spline(new float[]{-20,0,8.5f,16,23,32},new float[]{-0.8f,-0.45f,-0.3f,0.025f,0.375f,0.775f},new float[]{0,0,0,0,0,0});
     // continentalness erosion temperature vegetation weirdness<-(PV)
     public static float[] transform(
             int x0, int z0, float[] elev, float[] grad, float[] lowFreqGrad, float[] climate, float[] res) {
@@ -55,6 +56,8 @@ public class ClimateVariableTransform {
         float[] snowNoise = new float[1 << 18];
         float[] continentNoise = new float[1 << 18];
         float[] weirdnessNoise = new float[1 << 18];
+
+     //   Debug.tensor.see(new FloatTensor(climate,new int[]{4,512,512}),2,"precip", FractalTerrainConfig.DEFAULT_DEBUG_PATH);
 
         for (int r = 0; r < (1 << 9); r++) {
             for (int c = 0; c < (1 << 9); c++) {
@@ -90,7 +93,7 @@ public class ClimateVariableTransform {
                 // Climate channels: [0]=temp, [1]=t_season, [2]=precip, [3]=p_cv
                 float temp = climate[idx] + tempNoise[idx];
                 float tSeason = climate[(1 << 18) + idx];
-                float precip = Math.max(0f, climate[(2 << 1) + idx]) * precipNoiseFact[idx];
+                float precip = Math.max(0f, climate[(2 << 18) + idx]) * precipNoiseFact[idx];
                 float pCV = climate[(3 << 18) + idx];
 
                 // Derived climate variables
@@ -102,24 +105,13 @@ public class ClimateVariableTransform {
                 float treeMoisture = aridity * seasonPenalty;
 
                 // Growing season
-                float amplitude = tStd * 1.414f;
-                float growingSeason;
-                if (amplitude < 0.1f) {
-                    growingSeason = temp > 5f ? 365f : 0f;
-                } else {
-                    float x = (5f - temp) / amplitude;
-                    if (x <= -1f) growingSeason = 365f;
-                    else if (x >= 1f) growingSeason = 0f;
-                    else
-                        growingSeason =
-                                365f * (0.5f - (float) Math.asin(Math.max(-1f, Math.min(1f, x))) / (float) Math.PI);
-                }
+                float growingSeason = getGrowingSeason(tStd, temp);
 
-                float gsFactor = Math.max(0f, Math.min(1f, (growingSeason - 60f) / (150f - 60f)));
+                float gsFactor = Math.clamp((growingSeason - 60f) / (150f - 60f), 0f, 1f);
                 float effTreeMoisture = treeMoisture * gsFactor;
 
                 // Slope-dependent bare threshold
-                float moistureFactor = Math.max(0f, Math.min(1f, (treeMoisture - 0.35f) / 0.45f));
+                float moistureFactor = Math.clamp((treeMoisture - 0.35f) / 0.45f, 0f, 1f);
                 float bareThreshold = 0.7f + (1.19f - 0.7f) * moistureFactor;
 
                 // Tree coverage classification
@@ -166,14 +158,16 @@ public class ClimateVariableTransform {
                 float vegetation;
                 float weirdness;
 
-                float rescaledElev = elevVal / 8000f;
+                float rescaledElev = elevVal / 2000f;
 
                 if (elevVal < 0) {
-                    continentalness = Math.clamp(elevVal/89.4f, -1.05F, -0.11F) + continentNoise[idx];
+                    rescaledElev = elevVal/89.4f;
+                    continentalness = Math.clamp(rescaledElev, -1.04F, -0.11F) + continentNoise[idx];
+                   // if(rescaledElev<)
                 } else {
                     float tStdCont;
                     float hStdCont;
-                    float eCont = Math.clamp(rescaledElev, 0, 1);
+                    float eCont = Math.max(rescaledElev, 0) -0.2f;
                     if (tStd < 3) tStdCont = -0.15F;
                     else if (tStd < 5) tStdCont = -0.04F;
                     else if (tStd < 10) tStdCont = 0.165F;
@@ -187,37 +181,56 @@ public class ClimateVariableTransform {
                 }
 
                 float slopeLowFreq = lowFreqGrad[idx];
-                float lowE = 0.52F / (Math.abs(slopeLowFreq) + 1);
-                float resE = 0.02F * Math.clamp(residual / 10F, -1, 1);
-                float slopeE = 0.1F / (Math.abs(slope) + 1) - 0.05F;
-                float eE = -Math.clamp(rescaledElev, 0, 1);
+                float normPrecip = precip / 2000F;
+                double gradCompression = -1;
+                float gradInfluence = Math.clamp(Math.abs(rescaledElev),0,1);
+                float resMag = Math.abs(residual/15f);
+                float lowE = (float) Math.pow(Math.abs(slopeLowFreq)+1,gradCompression);
+                float slopeE = (float) Math.pow(Math.abs(slope)+1,gradCompression);
+                float resE = (float) Math.pow(Math.abs(residual*2f)+1,gradCompression);
+                lowE = erosionSpline.sample(lowE);
+                slopeE = erosionSpline.sample(slopeE);
+                float resENorm = erosionSpline.sample(resE);
+                float eE = -Math.max(rescaledElev, 0);
+                float veryFlatFactor = (slopeLowFreq>10||resMag>0.4) ? 0 : Math.clamp(normPrecip+0.2f,0,1)*resE;
+                float heightFactor = (elevVal<475) ? 0 : (0.2f-rescaledElev)*(1 + 2*Math.min(resMag,1));
 
-                erosion = lowE + resE + slopeE + eE;
+                erosion = gradInfluence*(0.5f*lowE + 0.3f*resENorm + 0.2f*slopeE + heightFactor) + (1-gradInfluence)*eE + veryFlatFactor;
 
                 float tT = 0;
                 float tStdT = (tStd / 20F) * 0.1F;
                 if (cool || cold || frozen) tStdT = -tStdT;
-                if (hot) tT = 0.775F;
+                if (hot&&precip<1000) {
+                    tT = 0.775F;
+                } else {
+                    // if it is very humid, then jungle
+                    tT = 0.375F;
+                }
                 if (warm) tT = 0.375F;
                 if (temperate) tT = 0.025F;
                 if (cool) tT = -0.3F;
                 if (cold) tT = -0.45F;
                 if (frozen) tT = -0.8F;
+                float elevationFactor = 0.03f*0.0325f*Math.max(0,elevVal);
+                float normTemp = temperatureSpline.sample(temp);
 
-                temperature = tT + tStdT + (tempNoise[idx] / 0.6F) * 0.02F;
+                temperature = 0.5f*tT + 0.5f*normTemp - elevationFactor + tStdT + (tempNoise[idx] / 0.6F) * 0.02F;
 
-                float precipV = precip / 2000F - 0.5F;
+                float precipV = 0.65f*normPrecip - 0.675f*(1.0f - normPrecip);
                 float treeV = 0;
                 if (barren) treeV = -0.675F;
                 if (treesSparse) treeV = -0.225F;
                 if (treesRainforest || treesForest || treesDense) {
                     treeV = 2.5F * effTreeMoisture - 1.25F;
                 }
-                vegetation = 0.25F * precipV + 0.75F * treeV;
 
-                float resW = 0.475F * Math.clamp(residual / 20F, -1, 1) - 0.525F;
+
+                //add temperature penalty (less extreme temerature -> more humid)
+                float temperatureGain = 0;
+                if(!frozen&&!hot) temperatureGain = 0.07f;
+                vegetation = 0.3F * precipV + 0.7F * treeV + temperatureGain + Math.clamp(0.6f-tStd,0,0.45f);
+                float resW = 0.333f*(1 + Math.clamp(residual / 8F, -1, 1));
                 float wNoise = Math.signum(weirdnessNoise[idx]);
-
                 weirdness = resW * wNoise;
 
                 out[idx] = continentalness;
@@ -228,5 +241,21 @@ public class ClimateVariableTransform {
             }
         }
         return out;
+    }
+
+    private static float getGrowingSeason(float tStd, float temp) {
+        float amplitude = tStd * 1.414f;
+        float growingSeason;
+        if (amplitude < 0.1f) {
+            growingSeason = temp > 5f ? 365f : 0f;
+        } else {
+            float x = (5f - temp) / amplitude;
+            if (x <= -1f) growingSeason = 365f;
+            else if (x >= 1f) growingSeason = 0f;
+            else
+                growingSeason =
+                        365f * (0.5f - (float) Math.asin(Math.clamp(x, -1f, 1f)) / (float) Math.PI);
+        }
+        return growingSeason;
     }
 }
